--- a/homepage.html
+++ b/homepage.html
@@ -13,35 +13,53 @@
     <div class='google-mast'>
       <div class='mast-left'>
         <ul>
-
+          <li><a href='#'>About</a></li>
+          <li><a href='#'>Store</a></li>
         </ul>
       </div>
 
       <div class='mast-right'>
         <ul>
-
+          <li><a href='#'>Gmail</a></li>
+          <li><a href='#'>Images</a></li>
+          <li><a href='#'>Google Apps></a></li>
+          <li><a href='#'>Notifications</a></li>
+          <li><a href='#'>Account</a></li>
         </ul>
       </div>
     </div>
 
     <div class='logo'>
-
+      <img src='logo.png' alt='google logo'>
     </div>
 
     <form>
       <div class='google-search'>
-
+        <input type='text' placeholder='Search'>
       </div>
 
       <div class='google-buttons'>
         <ul>
-
+          <li><input type='submit' class='btn' value="I'm feeling lucky"></li>
+          <li><input type='submit' class='btn' value='Search'></li>
         </ul>
       </div>
     </form>
     
     <div class='google-footer'>
-
+      <div class='footer-left'>
+        <ul>
+          <li><a href='#'>Advertising</a></li>
+          <li><a href='#'>Business</a></li>
+        </ul>
+      </div>
+      <div class='footer-right'>
+        <ul>
+          <li><a href='#'>Privacy</a></li>
+          <li><a href='#'>Terms</a></li>
+          <li><a href='#'>Settings</a></li>
+        </ul>
+      </div>
     </div>
 
 
