finished structure and position of elements

--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Google</title>
-    <link href="homepage.scss" rel="stylesheet">
+    <link href="homepage.css" type = "text/css" rel="stylesheet">
 
   </head>
 
@@ -29,23 +29,24 @@
       </div>
     </div>
 
-    <div class='logo'>
-      <img src='logo.png' alt='google logo'>
+    <div class="content">
+      <div class='logo'>
+        <img src='logo.png' alt='google logo' width='40%'>
+      </div>
+
+      <form>
+        <div class='google-search'>
+          <input type='text' placeholder='Search...' class='search-bar'>
+        </div>
+
+        <div class='google-buttons'>
+          <ul>
+            <li><input type='submit' class='btn' value="I'm feeling lucky"></li>
+            <li><input type='submit' class='btn' value='Search'></li>
+          </ul>
+        </div>
+      </form>
     </div>
-
-    <form>
-      <div class='google-search'>
-        <input type='text' placeholder='Search'>
-      </div>
-
-      <div class='google-buttons'>
-        <ul>
-          <li><input type='submit' class='btn' value="I'm feeling lucky"></li>
-          <li><input type='submit' class='btn' value='Search'></li>
-        </ul>
-      </div>
-    </form>
-    
     <div class='google-footer'>
       <div class='footer-left'>
         <ul>
