Implemented icon links in nav bar

--- a/homepage.html
+++ b/homepage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Google</title>
     <link href="homepage.css" type = "text/css" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
   </head>
 
@@ -22,9 +23,9 @@
         <ul>
           <li><a href='#'>Gmail</a></li>
           <li><a href='#'>Images</a></li>
-          <li><a href='#'>Google Apps></a></li>
-          <li><a href='#'>Notifications</a></li>
-          <li><a href='#'>Account</a></li>
+          <li><a href='#'><i class="fas fa-th"></i></a></li>
+          <li><a href='#'><i class="far fa-bell"></i></a></li>
+          <li><a href='#'><i class="fas fa-user-circle"></i></a></li>
         </ul>
       </div>
     </div>
